--- a/frontend/src/styles/generalStyles.css
+++ b/frontend/src/styles/generalStyles.css
@@ -31,25 +31,59 @@
     display: flex;
     flex-direction: column;
   }
+
+  .invite-row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
+  }
+
+  .invite-add-button,
+.invite-remove-button {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  margin-left: 10px;
+}
+  
+.invite-add-icon,
+.invite-remove-icon {
+  height: 40px; /* Adjust to match the height of your inputs */
+}
   
   .invite-form-label {
-    font-size: 18px;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    margin-right: 10px; /* Adjust as needed */
+  }
+
+  .invite-form-label > * {
     margin-bottom: 10px;
   }
   
   .invite-form-input,
   .invite-form-select {
+    width: 100%;
+    flex: 1;
     padding: 10px;
-    margin-bottom: 20px;
+    margin-right: 10px; /* Adjust as needed */
     border: 1px solid #ccc;
     border-radius: 5px;
   }
   
   .invite-form-button {
+    height: 40px;
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    margin-left: 10px;
   }
   
   .invite-form-button-submit {
